[package]
name = "ternio"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "0.4.14", features = ["audio"] }
egui-macroquad = "0.17.3"
backbone-lib = {path = "../../backbone-lib"}
serde = { version = "1.0.228", features = ["derive"] }
itertools = "0.14.0"

# Needed for text focus trick.
[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1"

