[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "0.4.14" }
egui-macroquad = "0.17.3"
serde = { version = "1.0.228", features = ["derive"] }
backbone-lib = {path = "../../backbone-lib"}


# Needed for text focus trick.
[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1"

